--- a/.env
+++ b/.env
@@ -36,3 +36,12 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=da4920bf207f03b643fb526ebb3ff764
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://testedevlaravel@gmail.com:yevlxtbeyevebeuz@localhost
+###< symfony/google-mailer ###
