--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "5.2.*",
-        "symfony/maker-bundle": "^1.26"
+        "symfony/maker-bundle": "^1.26",
+        "symfony/stopwatch": "^5.2",
+        "symfony/web-profiler-bundle": "^5.2"
     },
     "config": {
         "optimize-autoloader": true,
